# zmq.rs

./: CHANGELOG.md  Cargo.toml  perf-suite.json
.github/workflows/: main-ci.yml
benches/: bench_runtime.rs  codec.rs  compare_libzmq.rs  fanout_queue.rs  framed_read.rs  hotpath.rs  throughput.rs
docs/: BENCHMARKS.md  BENCHMARK_RESULTS.md  PERFORMANCE_ROADMAP.md
examples/: stock_server.rs  task_sink.rs  task_ventilator.rs  weather_server.rs  xpub_weather_server.rs
scripts/: package_perf_run.py  report_perf_suite.py  run_perf_suite.py
src/: backend.rs  error.rs  fair_queue.rs  lib.rs  message.rs  pub.rs  pull.rs  reconnect.rs  req.rs  router.rs  sub.rs  sub_backend.rs  util.rs  write_queue.rs  xpub.rs
src/codec/: framed.rs  mod.rs  zmq_codec.rs
src/endpoint/: mod.rs
src/transport/: ipc.rs  mod.rs  tcp.rs
tests/: connect.rs  large_message.rs  pub_sub_compliant_reverse.rs  push_pull_timeout.rs  reconnection_compliant.rs  recv_cancel_safety.rs  router_dealer_compliant.rs
tests/compliance/: mod.rs
