[package]
name = "zeromq"
version = "0.6.0"
authors = [
    "Alexei Kornienko <alexei.kornienko@gmail.com>",
    "Ryan Butler <thebutlah@gmail.com>",
    "Kyle Kelley <rgbkrk@gmail.com>",
]
edition = "2021"
description = "A native Rust implementation of ZeroMQ"
license = "MIT"
repository = "https://github.com/zeromq/zmq.rs"
rust-version = "1.85.0"

[features]
default = ["tokio-runtime", "all-transport"]
tokio-runtime = ["tokio", "tokio-util", "dep:socket2"]
async-std-runtime = ["async-std"]
async-dispatcher-runtime = ["async-std", "async-dispatcher"]
async-dispatcher-macros = ["async-dispatcher/macros"]
all-transport = ["ipc-transport", "tcp-transport"]
ipc-transport = ["dep:win_uds"]
tcp-transport = []
bench-internals = []

[dependencies]
async-dispatcher = { version = "0.1", optional = true }
thiserror = "2"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
# write_queue.rs uses mpsc::Receiver::try_recv, added in futures-channel 0.3.32.
# The futures meta-crate's "0.3" range would otherwise allow 0.3.31, which lacks it.
futures-channel = { version = "0.3.32", default-features = false, features = ["std"] }
async-trait = "0.1"
parking_lot = "0.12"
rand = { version = "0.10", default-features = false, features = ["thread_rng"] }
bytes = "1"
tokio = { version = "1", default-features = false, features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "time",
], optional = true }
tokio-util = { version = "0.7", default-features = false, features = ["compat"], optional = true }
scc = "3.7"
crossbeam-queue = "0.3"
uuid = { version = "1", default-features = false, features = ["v4"] }
regex = { version = "1", default-features = false, features = ["std"] }
once_cell = "1"
log = "0.4"
asynchronous-codec = "0.7"
async-std = { version = "1", features = ["attributes"], optional = true }
socket2 = { version = "0.6", optional = true }

[target.'cfg(windows)'.dependencies]
win_uds = { version = "=0.2.2", features = ["async"], optional = true }

[dev-dependencies]
async-dispatcher = { version = "0.1", features = ["macros"] }
chrono = "0.4"
criterion = "0.7"
futures = "0.3"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["full"] }
zmq2 = "0.5"
hex = "0.4"

[lib]
bench = false

[[bench]]
name = "codec"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "framed_read"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "compare_libzmq"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "hotpath"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "fanout_queue"
harness = false
